Remove dangling characters in build properties file

--- a/build.properties
+++ b/build.properties
@@ -8,6 +8,5 @@ test.jdbc.url: jdbc:mysql://localhost:3306/petstore_test
 test.jdbc.username: petstore
 test.jdbc.password: petstore
 test.hibernate.dialect: org.hibernate.dialect.MySQL5InnoDBDialect
-test.timeServer.host: localhost</test.timeServer.host>
+test.timeServer.host: localhost
 test.timeServer.port: 10013
-
