Get ready to support multiple system test environments in parallel
--HG--
rename : petstore-infrastructure/src/test/resources/test-database.properties => petstore-infrastructure/src/test/resources/integration-test.properties
rename : petstore-system-tests/src/test/java/test/support/com/pyxis/petstore/web/webdriver/SingletonWebDriverFactory.java => petstore-system-tests/src/test/java/test/support/com/pyxis/petstore/web/browser/LastingBrowser.java
rename : petstore-system-tests/src/test/java/test/support/com/pyxis/petstore/web/webdriver/ClassicWebDriverFactory.java => petstore-system-tests/src/test/java/test/support/com/pyxis/petstore/web/browser/PassingBrowser.java
rename : petstore-system-tests/src/test/java/test/support/com/pyxis/petstore/web/serverdriver/ExternallyManagedServerDriverFactory.java => petstore-system-tests/src/test/java/test/support/com/pyxis/petstore/web/server/ExternalServer.java
rename : petstore-system-tests/src/test/java/test/support/com/pyxis/petstore/web/serverdriver/SingletonServerDriverFactory.java => petstore-system-tests/src/test/java/test/support/com/pyxis/petstore/web/server/LastingServer.java
rename : petstore-system-tests/src/test/java/test/support/com/pyxis/petstore/web/serverdriver/PrototypeServerDriverFactory.java => petstore-system-tests/src/test/java/test/support/com/pyxis/petstore/web/server/PassingServer.java
rename : petstore-system-tests/src/test/java/test/support/com/pyxis/petstore/web/serverdriver/ServerDriver.java => petstore-system-tests/src/test/java/test/support/com/pyxis/petstore/web/server/ServerDriver.java
rename : petstore-system-tests/src/test/java/test/support/com/pyxis/petstore/web/serverdriver/ServerDriverFactory.java => petstore-system-tests/src/test/java/test/support/com/pyxis/petstore/web/server/ServerLifeCycle.java
rename : petstore-system-tests/src/test/java/test/support/com/pyxis/petstore/web/serverdriver/JettyDriver.java => petstore-system-tests/src/test/java/test/support/com/pyxis/petstore/web/server/Sing

--- a/petstore-system-tests/pom.xml
+++ b/petstore-system-tests/pom.xml
@@ -202,12 +202,6 @@
                             <includes>
                                 <include>**/*Feature.java</include>
                             </includes>
-                            <systemPropertyVariables>
-                                <timeServer.host>${test.timeServer.host}</timeServer.host>
-                                <timeServer.port>${test.timeServer.port}</timeServer.port>
-                                <server.port>${test.server.port}</server.port>
-                                <context.path>${context.path}</context.path>
-                            </systemPropertyVariables>
                         </configuration>
                     </plugin>
 
@@ -262,14 +256,8 @@
                                 <include>**/*Feature.java</include>
                             </includes>
                             <systemPropertyVariables>
-                                <!-- Uncomment to change webdriver and jetty runtime options -->
-                                <!--<webdriver.factory.class>test.support.com.pyxis.petstore.web.webdriver.ClassicWebDriverFactory</webdriver.factory.class>-->
-                                <!--<webdriver.class>org.openqa.selenium.chrome.ChromeDriver</webdriver.class>-->
-                                <serverdriver.factory.class>test.support.com.pyxis.petstore.web.serverdriver.ExternallyManagedServerDriverFactory</serverdriver.factory.class>
-                                <timeServer.host>${test.timeServer.host}</timeServer.host>
-                                <timeServer.port>${test.timeServer.port}</timeServer.port>
-                                <server.port>${test.server.port}</server.port>
-                                <context.path>${context.path}</context.path>
+                                <server.lifecycle>external</server.lifecycle>
+                                <browser.lifecycle>lasting</browser.lifecycle>
                             </systemPropertyVariables>
                         </configuration>
                         <executions>
