--- a/petstore-infrastructure/src/test/resources/integration/test.properties
+++ b/petstore-infrastructure/src/test/resources/integration/test.properties
@@ -2,5 +2,6 @@ jdbc.driverClassName: ${test.jdbc.driverClassName}
 jdbc.url: ${test.jdbc.url}
 jdbc.username: ${test.jdbc.username}
 jdbc.password: ${test.jdbc.password}
-
 hibernate.dialect: ${test.hibernate.dialect}
+
+migrations.path = ${project.basedir}/src/main/scripts/migrations
