--- a/petstore-system-tests/pom.xml
+++ b/petstore-system-tests/pom.xml
@@ -202,9 +202,11 @@
                             <includes>
                                 <include>**/*Feature.java</include>
                             </includes>
+                            <excludes>
+                                <exclude>**/SystemTest.java</exclude>
+                            </excludes>
                         </configuration>
                     </plugin>
-
                 </plugins>
             </build>
         </profile>
@@ -246,7 +248,15 @@
                         </executions>
                     </plugin>
 
-                    <!--*** Failsafe plugin: run integration tests ***-->
+                    <!--*** Run integration tests with failsafe plugin ***-->
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>2.5</version>
+                        <configuration>
+                            <skipTests>true</skipTests>
+                        </configuration>
+                    </plugin>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-failsafe-plugin</artifactId>
