--- a/petstore-system-tests/src/test/resources/system/test.properties
+++ b/petstore-system-tests/src/test/resources/system/test.properties
@@ -2,7 +2,7 @@ server.scheme: http
 server.host: ${test.server.host}
 server.port: ${test.server.port}
 server.context.path: ${context.path}
-server.webapp.path = ${project.basedir}/../petstore-app/src/main/webapp
+server.webapp.path = ${project.parent.basedir}/petstore-app/src/main/webapp
 server.lifecycle = lasting
 browser.lifecycle = lasting
 
@@ -11,6 +11,8 @@ jdbc.url: ${test.jdbc.url}
 jdbc.username: ${test.jdbc.username}
 jdbc.password: ${test.jdbc.password}
 hibernate.dialect: ${test.hibernate.dialect}
+
+migrations.path = ${project.parent.basedir}/petstore-infrastructure/src/main/scripts/migrations
 
 timeServer.host: ${test.timeServer.host}
 timeServer.port: ${test.timeServer.port}
