--- a/petstore-system-tests/pom.xml
+++ b/petstore-system-tests/pom.xml
@@ -64,25 +64,13 @@
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-support</artifactId>
-            <version>2.8.0</version>
+            <version>2.21.0</version>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.seleniumhq.selenium</groupId>
-            <artifactId>selenium-chrome-driver</artifactId>
-            <version>2.8.0</version>
-            <scope>test</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>commons-logging</groupId>
-                    <artifactId>commons-logging</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-firefox-driver</artifactId>
-            <version>2.8.0</version>
+            <version>2.21.0</version>
             <scope>test</scope>
             <exclusions>
                 <exclusion>
@@ -218,6 +206,33 @@
             </activation>
             <build>
                 <plugins>
+                    <!--*** Run integration tests with failsafe plugin ***-->
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-failsafe-plugin</artifactId>
+                        <version>2.5</version>
+                        <configuration>
+                            <includes>
+                                <include>**/*Feature.java</include>
+                            </includes>
+                            <systemPropertyVariables>
+                                <server.lifecycle>external</server.lifecycle>
+                                <browser.lifecycle>remote</browser.lifecycle>
+                                <browser.name>firefox</browser.name>
+                                <browser.platform>MAC</browser.platform>
+                                <browser.proxy>http://127.0.0.1:4444/wd/hub</browser.proxy>
+                            </systemPropertyVariables>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>integration-test</goal>
+                                    <goal>verify</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+
                     <plugin>
                         <groupId>com.carbonfive.db-support</groupId>
                         <artifactId>db-migration-maven-plugin</artifactId>
@@ -240,30 +255,6 @@
                                 <phase>pre-integration-test</phase>
                                 <goals>
                                     <goal>reset</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-
-                    <!--*** Run integration tests with failsafe plugin ***-->
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-failsafe-plugin</artifactId>
-                        <version>2.5</version>
-                        <configuration>
-                            <includes>
-                                <include>**/*Feature.java</include>
-                            </includes>
-                            <systemPropertyVariables>
-                                <server.lifecycle>external</server.lifecycle>
-                                <browser.lifecycle>lasting</browser.lifecycle>
-                            </systemPropertyVariables>
-                        </configuration>
-                        <executions>
-                            <execution>
-                                <goals>
-                                    <goal>integration-test</goal>
-                                    <goal>verify</goal>
                                 </goals>
                             </execution>
                         </executions>
