--- a/petstore-system-tests/src/test/resources/system/test.properties
+++ b/petstore-system-tests/src/test/resources/system/test.properties
@@ -2,10 +2,10 @@ server.scheme: http
 server.host: ${test.server.host}
 server.port: ${test.server.port}
 server.context.path: ${context.path}
-server.webapp.path = ${project.parent.basedir}/petstore-app/src/main/webapp
-server.lifecycle = lasting
+server.webapp.path: ${project.parent.basedir}/petstore-app/src/main/webapp
+server.lifecycle: lasting
 
-browser.lifecycle = lasting
+browser.lifecycle: lasting
 
 jdbc.driverClassName: ${test.jdbc.driverClassName}
 jdbc.url: ${test.jdbc.url}
