--- a/petstore-system-tests/src/test/resources/system/test.properties
+++ b/petstore-system-tests/src/test/resources/system/test.properties
@@ -6,7 +6,7 @@ server.webapp.path: ${project.parent.basedir}/petstore-app/src/main/webapp
 server.lifecycle: lasting
 
 browser.lifecycle: lasting
-## Run against selenium by using:
+## Run against selenium server by using:
 #browser.lifecycle: remote
 #browser.remote.url: http://127.0.0.1:4444/wd/hub
 #browser.remote.capability.browserName: firefox
