Reorganize build properties.
Move environment specific properties to env properties file.
Rename build.properties to test.properties, since it only contains test properties
Introduce test.log.dir property to indicate directory where to store test log files

--HG--
rename : build.properties => test.properties

--- a/pom.xml
+++ b/pom.xml
@@ -314,7 +314,7 @@
                         </goals>
                         <configuration>
                             <files>
-                                <file>${main.basedir}/build.properties</file>
+                                <file>${main.basedir}/test.properties</file>
                                 <file>${main.basedir}/${env}.properties</file>
                             </files>
                         </configuration>
