--- a/production.properties
+++ b/production.properties
@@ -1,10 +1,14 @@
 context.path:
 server.port: 8280
+
+log.dir: ${main.basedir}/logs
 log.file: production.log
+
 jdbc.driverClassName: com.mysql.jdbc.Driver
 jdbc.url: jdbc:mysql://psd-server:3306/petstore_dev
 jdbc.username: petstore
 jdbc.password: petstore
 hibernate.dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+
 timeServer.host: time.nist.gov
 timeServer.port: 13
