--- a/test.properties
+++ b/test.properties
@@ -1,12 +1,14 @@
-context.path:
-log.dir: ${main.basedir}/logs
 test.server.host: localhost
 test.server.port: 8180
+
+test.log.dir: ${main.basedir}/logs
 test.log.file: test.log
+
 test.jdbc.driverClassName: com.mysql.jdbc.Driver
 test.jdbc.url: jdbc:mysql://localhost:3306/petstore_test
 test.jdbc.username: petstore
 test.jdbc.password: petstore
 test.hibernate.dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+
 test.timeServer.host: localhost
 test.timeServer.port: 10013
