--- a/production.properties
+++ b/production.properties
@@ -1,13 +1,13 @@
 context.path:
-server.port: 8280
+server.port: 80
 
 log.dir: ${main.basedir}/logs
 log.file: production.log
 
 jdbc.driverClassName: com.mysql.jdbc.Driver
-jdbc.url: jdbc:mysql://psd-server:3306/petstore_dev
-jdbc.username: petstore
-jdbc.password: petstore
+jdbc.url: jdbc:mysql://${bees.database.server}:3306/testinfected_petstore
+jdbc.username: sysadmin
+jdbc.password: ${bees.database.password}
 hibernate.dialect: org.hibernate.dialect.MySQL5InnoDBDialect
 
 timeServer.host: time.nist.gov
