Try using jenkins auto generated tunnel names

--- a/integration.properties
+++ b/integration.properties
@@ -1,4 +1,4 @@
-context.path:
+context.path: /petstore
 server.port: 8000
 
 log.dir: ${main.basedir}/logs
@@ -10,7 +10,7 @@ jdbc.username: integrator
 jdbc.password: ${bees.database.password}
 hibernate.dialect: org.hibernate.dialect.MySQL5InnoDBDialect
 
-test.server.host: petstore
+test.server.host: ${sauce.host}
 test.server.port: 80
 
 test.log.dir: ${main.basedir}/logs
