Separate local from cloudbees environment properties.
Reorganize property files by separating distinction of local vs cloud environment and dev vs int vs prod profiles.
The build defaults to local environment with development profile.

Override profile using maven profile (integration or production) and override environment with -Dwhere=cloudbees when running maven.

--HG--
rename : test.properties => etc/cloudbees.properties
rename : development.properties => etc/development.properties
rename : integration.properties => etc/integration.properties
rename : test.properties => etc/local.properties
rename : production.properties => etc/production.properties
rename : test.properties => etc/test.properties

--- a/petstore-app/pom.xml
+++ b/petstore-app/pom.xml
@@ -108,6 +108,12 @@
                 <artifactId>maven-jetty-plugin</artifactId>
                 <version>6.1.22</version>
                 <configuration>
+                    <systemProperties>
+                        <systemProperty>
+                            <name>jetty.port</name>
+                            <value>${server.port}</value>
+                        </systemProperty>
+                    </systemProperties>
                     <contextPath>${context.path}</contextPath>
                     <scanIntervalSeconds>10</scanIntervalSeconds>
                     <stopKey>foo</stopKey>
