--- a/etc/test.properties
+++ b/etc/test.properties
@@ -1,14 +1,9 @@
-test.server.host: localhost
-test.server.port: 8180
-
 test.log.dir: ${main.basedir}/logs
 test.log.file: test.log
 
 test.jdbc.driverClassName: com.mysql.jdbc.Driver
-test.jdbc.url: jdbc:mysql://localhost:3306/petstore_test
-test.jdbc.username: petstore
-test.jdbc.password: petstore
+test.jdbc.url: jdbc:mysql://${database.server}:${database.port}/petstore-test
+test.jdbc.username: testbot
 test.hibernate.dialect: org.hibernate.dialect.MySQL5InnoDBDialect
 
-test.timeServer.host: localhost
 test.timeServer.port: 10013
