Replicate cloud like environment locally.
- Sauce remote port is configurable.
- Application can be deployed on local cloud with maven cloudbees plugin.
- System tests can be run on a prod like environment.

--- a/etc/cloudbees.properties
+++ b/etc/cloudbees.properties
@@ -7,7 +7,7 @@ jdbc.password: ${bees.database.password}
 hibernate.dialect: org.hibernate.dialect.MySQL5InnoDBDialect
 
 test.server.host: ${sauce.host}
-test.server.port: 80
+test.server.port: ${sauce.port}
 
 test.jdbc.password: ${bees.database.password}
 
