--- a/pom.xml
+++ b/pom.xml
@@ -149,6 +149,7 @@
                 <groupId>javax.servlet</groupId>
                 <artifactId>servlet-api</artifactId>
                 <version>2.5</version>
+                <scope>provided</scope>
             </dependency>
             <!--  URL Rewrite -->
             <dependency>
